--- a/SampleWeaver/SampleWeaver.csproj
+++ b/SampleWeaver/SampleWeaver.csproj
@@ -7,7 +7,7 @@
   <Import Project="..\FodyPackaging\build\FodyPackaging.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;netstandard2.0;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
   </PropertyGroup>
 
   <Import Project="..\FodyPackaging\build\FodyPackaging.targets" />
