--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,7 @@
     <!-- work around https://github.com/dotnet/msbuild/issues/4303 -->
     <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
     <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
+    <NuGetAuditMode>direct</NuGetAuditMode>
   </PropertyGroup>
 
   <Target Name="IncludeAllInPackage">
